--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,6 +1,53 @@
-
+h1 {
+	background: #2980b9;
+	color: white;
+	margin: 0;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	font-size: 24px;
+	font-weight: normal;
+}
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+body {
+	font-family: Roboto;
+	background: #c2e59c;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(left, #64b3f4, #c2e59c);
+	background: -o-linear-gradient(left, #64b3f4, #c2e59c);
+	background: linear-gradient(to right, #64b3f4, #c2e59c);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+li {
+	background: #fff;
+	height: 40px;
+	line-height: 40px;
+	color: #666;
+}
+li:nth-child(2n) {
+	background: #f7f7f7;
+}
+input {
+	color: #2980b9;
+	font-size: 18px;
+	background: #f7f7f7;
+	width: 100%;
+	padding: 13px 13px 13px 20px;
+	box-sizing: border-box;
+}
+input:focus {
+	background: #fff;
+	border: 3px solid #2980b9;
+	outline: none;
+}
 #container {
-	border: 2px solid grey;
+	box-shadow: 0 0 3px rgba(0,0,0, 0.1);
 	width: 360px;
-	margin: 0 auto;
+	margin: 100px auto;
+	background: #f7f7f7;
+}
+.completed {
+	color: gray;
+	text-decoration: line-through;
 }
