--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,3 +1,10 @@
+body {
+	font-family: Roboto;
+	background: #c2e59c;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(left, #64b3f4, #c2e59c);
+	background: -o-linear-gradient(left, #64b3f4, #c2e59c);
+	background: linear-gradient(to right, #64b3f4, #c2e59c);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 h1 {
 	background: #2980b9;
 	color: white;
@@ -12,13 +19,6 @@ ul {
 	margin: 0;
 	padding: 0;
 }
-body {
-	font-family: Roboto;
-	background: #c2e59c;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(left, #64b3f4, #c2e59c);
-	background: -o-linear-gradient(left, #64b3f4, #c2e59c);
-	background: linear-gradient(to right, #64b3f4, #c2e59c);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
 li {
 	background: #fff;
 	height: 40px;
@@ -28,6 +28,21 @@ li {
 li:nth-child(2n) {
 	background: #f7f7f7;
 }
+li:hover span {
+	width: 40px;
+	opacity: 1.0;
+}
+span {
+	background: #e74c3c;
+	height: 40px;
+	margin-right: 20px;
+	text-align: center;
+	color: white;
+	width: 0px;
+	display: inline-block;
+	transition: 0.2s linear;
+	opacity: 0;
+}
 input {
 	color: #2980b9;
 	font-size: 18px;
@@ -35,19 +50,23 @@ input {
 	width: 100%;
 	padding: 13px 13px 13px 20px;
 	box-sizing: border-box;
+	border: 3px solid rgba(0,0,0,0);
 }
 input:focus {
 	background: #fff;
 	border: 3px solid #2980b9;
 	outline: none;
 }
+.fa-plus {
+	float: right;
+}
+.completed {
+	color: gray;
+	text-decoration: line-through;
+}
 #container {
 	box-shadow: 0 0 3px rgba(0,0,0, 0.1);
 	width: 360px;
 	margin: 100px auto;
 	background: #f7f7f7;
-}
-.completed {
-	color: gray;
-	text-decoration: line-through;
 }
